--- a/alanlib_ita/lib_verbi.html
+++ b/alanlib_ita/lib_verbi.html
@@ -438,7 +438,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.17-Alpha,</span>
+<span id="revnumber">versione 0.7.18-Alpha,</span>
 <span id="revdate">2018-11-03</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
@@ -506,6 +506,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_blocca_con">blocca_con</a></li>
 <li><a href="#_chiudi">chiudi</a></li>
 <li><a href="#_chiudi_con">chiudi_con</a></li>
+<li><a href="#_sblocca">sblocca</a></li>
+<li><a href="#_sblocca_con">sblocca_con</a></li>
 </ul>
 </li>
 <li><a href="#_azioni_sensoriali">Azioni Sensoriali</a>
@@ -544,6 +546,46 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_svuota_versa">svuota + versa</a></li>
 <li><a href="#_svuota_in_versa_in">svuota_in + versa_in</a></li>
 <li><a href="#_svuota_su_versa_su">svuota_su + versa_su</a></li>
+</ul>
+</li>
+<li><a href="#_guardare_ed_esaminare">Guardare ed Esaminare</a>
+<ul class="sectlevel3">
+<li><a href="#_esamina">esamina</a></li>
+<li><a href="#_guarda">guarda</a></li>
+<li><a href="#_guarda_attraverso">guarda_attraverso</a></li>
+<li><a href="#_guarda_dietro">guarda_dietro</a></li>
+<li><a href="#_guarda_fuori_da">guarda_fuori_da</a></li>
+<li><a href="#_guarda_in">guarda_in</a></li>
+<li><a href="#_guarda_sotto">guarda_sotto</a></li>
+<li><a href="#_guarda_su">guarda_su</a></li>
+</ul>
+</li>
+<li><a href="#_commerciare">Commerciare</a>
+<ul class="sectlevel3">
+<li><a href="#_compra">compra</a></li>
+<li><a href="#_vendi">vendi</a></li>
+</ul>
+</li>
+<li><a href="#_rompere_ed_aggiustare">Rompere ed Aggiustare</a>
+<ul class="sectlevel3">
+<li><a href="#_ripara">ripara</a></li>
+<li><a href="#_rompi">rompi</a></li>
+<li><a href="#_rompi_con">rompi_con</a></li>
+</ul>
+</li>
+<li><a href="#_dare_e_prendere">Dare e Prendere</a>
+<ul class="sectlevel3">
+<li><a href="#_dai_a">dai_a</a></li>
+<li><a href="#_lascia">lascia</a></li>
+<li><a href="#_prendi">prendi</a></li>
+<li><a href="#_prendi_da">prendi_da</a></li>
+</ul>
+</li>
+<li><a href="#_vestirsi_e_svestirsi">Vestirsi e Svestirsi</a>
+<ul class="sectlevel3">
+<li><a href="#_indossa">indossa</a></li>
+<li><a href="#_togliti">togliti</a></li>
+<li><a href="#_spogliati">spogliati</a></li>
 </ul>
 </li>
 </ul>
@@ -1953,6 +1995,12 @@ luce e dispositivi:</p>
 <li>
 <p><code>chiudi_con</code></p>
 </li>
+<li>
+<p><code>sblocca</code></p>
+</li>
+<li>
+<p><code>sblocca_con</code></p>
+</li>
 </ul>
 </div>
 <div class="sect3">
@@ -1977,6 +2025,14 @@ luce e dispositivi:</p>
 </div>
 <div class="sect3">
 <h4 id="_chiudi_con"><a class="anchor" href="#_chiudi_con"></a>chiudi_con</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_sblocca"><a class="anchor" href="#_sblocca"></a>sblocca</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_sblocca_con"><a class="anchor" href="#_sblocca_con"></a>sblocca_con</h4>
 
 </div>
 </div>
@@ -2271,6 +2327,230 @@ liquido ma non il verbo <code>svuota</code>.</p>
 </div>
 <div class="sect3">
 <h4 id="_svuota_su_versa_su"><a class="anchor" href="#_svuota_su_versa_su"></a>svuota_su + versa_su</h4>
+
+</div>
+</div>
+<div class="sect2">
+<h3 id="_guardare_ed_esaminare"><a class="anchor" href="#_guardare_ed_esaminare"></a>Guardare ed Esaminare</h3>
+<div class="paragraph">
+<p>Questo gruppo raccoglie i verbi &#8216;eamina&#8217; e &#8216;guarda&#8217;, con le loro varianti:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><code>esamina</code></p>
+</li>
+<li>
+<p><code>guarda</code></p>
+</li>
+<li>
+<p><code>guarda_attraverso</code></p>
+</li>
+<li>
+<p><code>guarda_dietro</code></p>
+</li>
+<li>
+<p><code>guarda_fuori_da</code></p>
+</li>
+<li>
+<p><code>guarda_in</code></p>
+</li>
+<li>
+<p><code>guarda_sotto</code></p>
+</li>
+<li>
+<p><code>guarda_su</code></p>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>Verbi di questo gruppo non ancora tradotti:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><code>search</code> (non sono certo se appartenga a questo gruppo o meno)</p>
+</li>
+</ul>
+</div>
+<div class="sect3">
+<h4 id="_esamina"><a class="anchor" href="#_esamina"></a>esamina</h4>
+<div class="paragraph">
+<p>Se l&#8217;oggetto esaminato è <code>leggibile</code> e l&#8217;attributo <code>xDesc</code> è una stringa
+vuota, allora <code>esamina</code> si comporterà come il verbo <code>leggi</code> e mostrerà il
+contenuto del&#8217;attributo <code>testo</code>. Se invece la <code>xDesc</code> dell&#8217;oggetto contiene
+del testo, allora <code>esamina</code> lo tratterà come qualsiasi altro oggetto e
+mostrerà il testo di <code>xDesc</code>.</p>
+</div>
+<div class="paragraph">
+<p>Questo comportamento è stato modificato rispetto alla libreria originale
+inglese, dove <code>esamina</code> si comportava sempre come <code>leggi</code> in presenza
+dell&#8217;attributo <code>leggibile</code>. Questa modifica è stata apportata al fine di
+consentire all&#8217;autore di rendere un oggetto leggibile anche esaminabile&#8201;&#8212;&#8201;p.es. se creiamo un antico libro magico, ci piacerebbe che esaminandolo il
+giocatore possa ottenere una descrizione del manufatto (&#8220;Un manoscritto
+rilegato in pelle, sembra molto antico.&#8221;) al fine di rafforzare l&#8217;atmosfera
+del gioco e valorizzare l&#8217;oggetto.</p>
+</div>
+<div class="paragraph">
+<p>Qualora non fosse importante fornire una descrizione dell&#8217;oggetto (p.es.
+un semplice post-it o un foglio di carta) e si preferisse che esaminare
+l&#8217;oggetto equivalesse a leggerlo, sarà sufficiente non fornire all&#8217;oggetto
+l&#8217;attributo <code>xDesc</code> (che di default è una stringa vuota).</p>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_guarda"><a class="anchor" href="#_guarda"></a>guarda</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_guarda_attraverso"><a class="anchor" href="#_guarda_attraverso"></a>guarda_attraverso</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_guarda_dietro"><a class="anchor" href="#_guarda_dietro"></a>guarda_dietro</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_guarda_fuori_da"><a class="anchor" href="#_guarda_fuori_da"></a>guarda_fuori_da</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_guarda_in"><a class="anchor" href="#_guarda_in"></a>guarda_in</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_guarda_sotto"><a class="anchor" href="#_guarda_sotto"></a>guarda_sotto</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_guarda_su"><a class="anchor" href="#_guarda_su"></a>guarda_su</h4>
+
+</div>
+</div>
+<div class="sect2">
+<h3 id="_commerciare"><a class="anchor" href="#_commerciare"></a>Commerciare</h3>
+<div class="paragraph">
+<p>Questo gruppo include i verbi per la compravendita:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><code>compra</code></p>
+</li>
+<li>
+<p><code>vendi</code></p>
+</li>
+</ul>
+</div>
+<div class="sect3">
+<h4 id="_compra"><a class="anchor" href="#_compra"></a>compra</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_vendi"><a class="anchor" href="#_vendi"></a>vendi</h4>
+
+</div>
+</div>
+<div class="sect2">
+<h3 id="_rompere_ed_aggiustare"><a class="anchor" href="#_rompere_ed_aggiustare"></a>Rompere ed Aggiustare</h3>
+<div class="paragraph">
+<p>Questo gruppo include i verbi per danneggiare o riparare cose:</p>
+</div>
+<div class="paragraph">
+<p>Verbi di questo gruppo non ancora tradotti:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><code>ripara</code></p>
+</li>
+<li>
+<p><code>rompi</code></p>
+</li>
+<li>
+<p><code>rompi_con</code></p>
+</li>
+</ul>
+</div>
+<div class="sect3">
+<h4 id="_ripara"><a class="anchor" href="#_ripara"></a>ripara</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_rompi"><a class="anchor" href="#_rompi"></a>rompi</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_rompi_con"><a class="anchor" href="#_rompi_con"></a>rompi_con</h4>
+
+</div>
+</div>
+<div class="sect2">
+<h3 id="_dare_e_prendere"><a class="anchor" href="#_dare_e_prendere"></a>Dare e Prendere</h3>
+<div class="paragraph">
+<p>Questo gruppo riguarda i verbi per dare, prendere e lasciare oggetti:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><code>dai_a</code></p>
+</li>
+<li>
+<p><code>lascia</code></p>
+</li>
+<li>
+<p><code>prendi</code></p>
+</li>
+<li>
+<p><code>prendi_da</code></p>
+</li>
+</ul>
+</div>
+<div class="sect3">
+<h4 id="_dai_a"><a class="anchor" href="#_dai_a"></a>dai_a</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_lascia"><a class="anchor" href="#_lascia"></a>lascia</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_prendi"><a class="anchor" href="#_prendi"></a>prendi</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_prendi_da"><a class="anchor" href="#_prendi_da"></a>prendi_da</h4>
+
+</div>
+</div>
+<div class="sect2">
+<h3 id="_vestirsi_e_svestirsi"><a class="anchor" href="#_vestirsi_e_svestirsi"></a>Vestirsi e Svestirsi</h3>
+<div class="paragraph">
+<p>Questo gruppo raccoglie i verbi riguardanti il vestiario e denudarsi:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><code>indossa</code></p>
+</li>
+<li>
+<p><code>togliti</code></p>
+</li>
+<li>
+<p><code>spogliati</code></p>
+</li>
+</ul>
+</div>
+<div class="sect3">
+<h4 id="_indossa"><a class="anchor" href="#_indossa"></a>indossa</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_togliti"><a class="anchor" href="#_togliti"></a>togliti</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_spogliati"><a class="anchor" href="#_spogliati"></a>spogliati</h4>
 
 </div>
 </div>
@@ -2769,6 +3049,12 @@ italiano del modulo dei verbi.</p>
 <p><i class="fa fa-square-o"></i> Descrizione <code>chiudi_con</code>.</p>
 </li>
 <li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>sblocca</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>sblocca_con</code>.</p>
+</li>
+<li>
 <p><i class="fa fa-square-o"></i> Descrizione <code>annusa0</code>.</p>
 </li>
 <li>
@@ -2834,6 +3120,66 @@ italiano del modulo dei verbi.</p>
 <li>
 <p><i class="fa fa-square-o"></i> Descrizione <code>svuota_su</code> + <code>versa_su</code>.</p>
 </li>
+<li>
+<p><i class="fa fa-check-square-o"></i> Descrizione <code>esamina</code> (da completare).</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>guarda</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>guarda_attraverso</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>guarda_dietro</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>guarda_fuori_da</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>guarda_in</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>guarda_sotto</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>guarda_su</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>compra</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>vendi</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>ripara</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>rompi</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>rompi_con</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>dai_a</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>lascia</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>prendi</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>prendi_da</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>indossa</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>togliti</code>.</p>
+</li>
+<li>
+<p><i class="fa fa-square-o"></i> Descrizione <code>spogliati</code>.</p>
+</li>
 </ul>
 </div>
 </div>
@@ -2842,7 +3188,7 @@ italiano del modulo dei verbi.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.17-Alpha<br>
+Versione 0.7.18-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
