Translate `put*` Verbs
This commit translates all the verbs of the `put` group.
Still many untranslated responses, also some bugs need to be fixed in
some of these verbs across classes.

--- a/alanlib_ita/lib_classi.html
+++ b/alanlib_ita/lib_classi.html
@@ -481,8 +481,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_svuota_in">svuota_in</a></li>
 <li><a href="#_svuota_su">svuota_su</a></li>
 <li><a href="#_riempi_con">riempi_con</a></li>
-<li><a href="#_put_in">put_in</a></li>
-<li><a href="#_put_on">put_on</a></li>
+<li><a href="#_metti_in">metti_in</a></li>
+<li><a href="#_metti_su">metti_su</a></li>
 </ul>
 </li>
 </ul>
@@ -1009,11 +1009,11 @@ Di default un liquido non è potabile.</p>
 
 </div>
 <div class="sect3">
-<h4 id="_put_in"><a class="anchor" href="#_put_in"></a>put_in</h4>
+<h4 id="_metti_in"><a class="anchor" href="#_metti_in"></a>metti_in</h4>
 
 </div>
 <div class="sect3">
-<h4 id="_put_on"><a class="anchor" href="#_put_on"></a>put_on</h4>
+<h4 id="_metti_su"><a class="anchor" href="#_metti_su"></a>metti_su</h4>
 
 </div>
 </div>
@@ -1269,10 +1269,10 @@ italiano del modulo delle classi.</p>
 <p><i class="fa fa-square-o"></i> Descrizione <code>riempi_con</code>.</p>
 </li>
 <li>
-<p><i class="fa fa-square-o"></i> Descrizione <code>put_in</code>.</p>
+<p><i class="fa fa-square-o"></i> Descrizione <code>metti_in</code>.</p>
 </li>
 <li>
-<p><i class="fa fa-square-o"></i> Descrizione <code>put_on</code>.</p>
+<p><i class="fa fa-square-o"></i> Descrizione <code>metti_su</code>.</p>
 </li>
 </ul>
 </div>
