--- a/alanlib_ita/lib_definizioni.html
+++ b/alanlib_ita/lib_definizioni.html
@@ -438,7 +438,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.7.12-Alpha,</span>
+<span id="revnumber">versione 0.7.13-Alpha,</span>
 <span id="revdate">2018-11-03</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
@@ -561,9 +561,16 @@ giocatore il messaggio &#8220;Non puoi farlo.&#8221;.</p>
   CAN leggere.                  ---&gt; read
   CAN liberare.                 ---&gt; free         (+ release)
   CAN mangiare.                 ---&gt; eat
+  CAN mettere.                  ---&gt; put          (+ lay, place)
+  CAN mettere_contro.           ---&gt; put_against
+  CAN mettere_dietro.           ---&gt; put_behind
+  CAN mettere_in.               ---&gt; put_in       (+ insert)
+  CAN mettere_sotto.            ---&gt; put_under
+  CAN mettere_su.               ---&gt; put_on
+  CAN mettere_vicino.           ---&gt; put_near
   CAN modalità_breve.           ---&gt; brief
   CAN modalità_lunga.           ---&gt; verbose
-  CAN mordere.                  ---&gt; bite (+ chew)
+  CAN mordere.                  ---&gt; bite         (+ chew)
   CAN mostrare.                 ---&gt; 'show'       (+ reveal)
   CAN notificare.               ---&gt; 'notify'
   CAN notificare_off.           ---&gt; notify_off
@@ -571,7 +578,7 @@ giocatore il messaggio &#8220;Non puoi farlo.&#8221;.</p>
   CAN nuotare.                  ---&gt; swim
   CAN nuotare_in.               ---&gt; swim_in
   CAN parlare.                  ---&gt; talk
-  CAN parlare_con.              ---&gt; talk_to (+ speak)
+  CAN parlare_con.              ---&gt; talk_to      (+ speak)
   CAN pensare.                  ---&gt; think
   CAN pensare_a.                ---&gt; think_about
   CAN pregare.                  ---&gt; pray
@@ -583,9 +590,9 @@ giocatore il messaggio &#8220;Non puoi farlo.&#8221;.</p>
   CAN riempire.                 ---&gt; fill
   CAN riempire_con.             ---&gt; fill_with
   CAN rifare.                   ---&gt; 'again'
-  CAN ringraziamenti.           ---&gt; credits (+ acknowledgments, author, copyright)
-  CAN riparare.                 ---&gt; fix (+ mend, repair)
-  CAN rispondere.               ---&gt; answer (+ reply)
+  CAN ringraziamenti.           ---&gt; credits      (+ acknowledgments, author, copyright)
+  CAN riparare.                 ---&gt; fix          (+ mend, repair)
+  CAN rispondere.               ---&gt; answer       (+ reply)
   CAN rispondere_No.            ---&gt; 'no'
   CAN rispondere_Sì.            ---&gt; yes
   CAN rompere.                  ---&gt; break        (+ destroy)
@@ -734,18 +741,11 @@ italiano del modulo delle definizioni.</p>
   CAN lie_in.
   CAN lie_on.
   CAN lift.
---CAN light. ---------------------&gt; ** VERBO ELIMINATO ** (+ lit)
+--CAN light. ---------------------&gt; ** VERBO ELIMINATO **
 --CAN look_at. -------------------&gt; ** VERBO OBSOLETO (StdLib 1?) ** (= esamina)
   CAN pry.
   CAN pry_with.
-  CAN put.         -- (+ lay, place)
-  CAN put_against.
-  CAN put_behind.
-  CAN put_down.
-  CAN put_in.      -- (+ insert)
-  CAN put_near.
-  CAN put_on.
-  CAN put_under.
+--CAN put_down. ------------------&gt; ** WASN'T USED! (SEE 'drop'!) **
   CAN rub.
   CAN search.
   CAN shake.
@@ -778,7 +778,7 @@ italiano del modulo delle definizioni.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.7.12-Alpha<br>
+Versione 0.7.13-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
