--- a/alanlib_ita/ANNOTAZIONI_DOXTER.html
+++ b/alanlib_ita/ANNOTAZIONI_DOXTER.html
@@ -730,6 +730,12 @@ I frammenti delle regioni hanno un sottopeso; durante la fase di collatura del d
 <td class="tableblock halign-left valign-top"><p class="tableblock">== Mettere</p></td>
 </tr>
 <tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>21300</code></p></td>
+<td class="tableblock halign-right valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>gruppo_saltare</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">== Saltare</p></td>
+</tr>
+<tr>
 <td class="tableblock halign-right valign-top"><p class="tableblock"><code>30000</code></p></td>
 <td class="tableblock halign-right valign-top"></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>comandi_comandi_domande</code></p></td>
